--- a/css/default.css
+++ b/css/default.css
@@ -1,30 +1,55 @@
+@import "base.css";
+
+@font-face {
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('PT Sans'), local('PTSans-Regular'), url(PTSans-Regular.woff) format('woff');
+}
+
+
 body {
-    color: black;
+    background:#fff;
+    color: #444;
+    font-family: 'PT Sans', 'helvetica', sans-serif;
     font-size: 16px;
-    margin: 0px auto 0px auto;
+    font-weight:300;
+    margin: 50px auto 0px auto;
     width: 600px;
 }
 
 div#header {
-    border-bottom: 2px solid black;
+    background: url(../images/haskell-logo.png) no-repeat;
+    background-size: 73px;
+    border-bottom: 2px solid #ddd;
     margin-bottom: 30px;
+    margin-top: 50px;
     padding: 12px 0px 12px 0px;
 }
 
-div#logo a {
-    color: black;
+div.logo a {
+    color: #343333;
+    display:none;
     float: left;
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
 }
 
-div#header #navigation {
+div.logo a:hover {
+    color: #A43400;
+    float: left;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+header nav {
     text-align: right;
 }
 
-div#header #navigation a {
-    color: black;
+header nav a {
+    color: #343333;
     font-size: 18px;
     font-weight: bold;
     margin-left: 12px;
@@ -32,13 +57,25 @@ div#header #navigation a {
     text-transform: uppercase;
 }
 
-div#footer {
-    border-top: solid 2px black;
-    color: #555;
+header nav a:hover {
+    color: #666;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+
+footer {
+    border-top: dotted 1px #ddd;
+    color: #BBB;
     font-size: 12px;
     margin-top: 30px;
     padding: 12px 0px 12px 0px;
     text-align: right;
+}
+
+footer a{
+    font-size: 12px;
+    font-weight: 500;
 }
 
 h1 {
@@ -49,8 +86,94 @@ h2 {
     font-size: 20px;
 }
 
-div.info {
+section.header {
     color: #555;
     font-size: 14px;
     font-style: italic;
 }
+
+ul, ol {
+    padding-left: 20px;
+}
+
+a {
+    color: #720000;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+p {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom:20px;
+}
+
+/* SYNTAX HIGHLIGHTING */
+/* https://github.com/tejasbubane/hakyll-css/blob/master/css/kate.css */
+
+pre > code.sourceCode { white-space: pre; position: relative; }
+pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span:empty { height: 1.2em; }
+.sourceCode { overflow: visible; }
+code.sourceCode > span { color: inherit; text-decoration: inherit; }
+div.sourceCode { margin: 1em 0; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+pre > code.sourceCode { white-space: pre-wrap; }
+pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
+}
+pre.numberSource code
+  { counter-reset: source-line 0; }
+pre.numberSource code > span
+  { position: relative; left: -4em; counter-increment: source-line; }
+pre.numberSource code > span > a:first-child::before
+  { content: counter(source-line);
+    position: relative; left: -1em; text-align: right; vertical-align: baseline;
+    border: none; display: inline-block;
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    background-color: #ffffff;
+    color: #a0a0a0;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
+div.sourceCode
+  { color: #1f1c1b; background-color: #ffffff; }
+@media screen {
+pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
+}
+code span { color: #1f1c1b; } /* Normal */
+code span.al { color: #bf0303; background-color: #f7e6e6; font-weight: bold; } /* Alert */
+code span.an { color: #ca60ca; } /* Annotation */
+code span.at { color: #0057ae; } /* Attribute */
+code span.bn { color: #b08000; } /* BaseN */
+code span.bu { color: #644a9b; font-weight: bold; } /* BuiltIn */
+code span.cf { color: #1f1c1b; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #924c9d; } /* Char */
+code span.cn { color: #aa5500; } /* Constant */
+code span.co { color: #898887; } /* Comment */
+code span.cv { color: #0095ff; } /* CommentVar */
+code span.do { color: #607880; } /* Documentation */
+code span.dt { color: #0057ae; } /* DataType */
+code span.dv { color: #b08000; } /* DecVal */
+code span.er { color: #bf0303; text-decoration: underline; } /* Error */
+code span.ex { color: #0095ff; font-weight: bold; } /* Extension */
+code span.fl { color: #b08000; } /* Float */
+code span.fu { color: #644a9b; } /* Function */
+code span.im { color: #ff5500; } /* Import */
+code span.in { color: #b08000; } /* Information */
+code span.kw { color: #1f1c1b; font-weight: bold; } /* Keyword */
+code span.op { color: #1f1c1b; } /* Operator */
+code span.ot { color: #006e28; } /* Other */
+code span.pp { color: #006e28; } /* Preprocessor */
+code span.re { color: #0057ae; background-color: #e0e9f8; } /* RegionMarker */
+code span.sc { color: #3daee9; } /* SpecialChar */
+code span.ss { color: #ff5500; } /* SpecialString */
+code span.st { color: #bf0303; } /* String */
+code span.va { color: #0057ae; } /* Variable */
+code span.vs { color: #bf0303; } /* VerbatimString */
+code span.wa { color: #bf0303; } /* Warning */
