--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -13,6 +13,7 @@
             @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Overpass+Mono&display=swap');
         </style>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="/css/blogpost.css" />
     </head>
     <body>
         <div class="container-fluid">
@@ -25,33 +26,24 @@
                 </header>
             </div>
             <div class="row">
-                <div class="col-sm-4 sidebar">
-                    <h1><a href="/">Egor Lappo</a></h1>
+                <main role="main">
+                    <h1>$title$</h1>
 
-                    <p class="align-content-center">
-                        <img class="photo rounded" src="images/pic.jpeg" alt="my photo)))" />
-                    </p>
+                    <div class="info">
+                        Posted on $date$
 
-                    <p>
-                        $description$
-                    </p>
+                        $if(author)$
+                            by $author$
+                        $else$
+                            by <a href="https://egorlappo.github.io">Egor Lappo</a>
+                        $endif$
+                    </div>
 
-                    <p> twitter: <a href="https://twitter.com/$twitter$"><tt>@$twitter$</tt></a> </p>
-
-                    <p> github: <a href="https://github.com/$github$"><tt>$github$</tt></a> </p>
-
-                    <p> email: <a href="mailto:$email$"><tt>egor(at)ccrma.stanford.edu</tt></a> </p>
-
-                    <p><b>I have recently changed my name! <br> Before, I was <i>Egor Alimpiev</i>. <br> You can still email me at <br> <tt>alimpiev(at)stanford.edu</tt>!</b></p>
-                    <hr>
-                </div>
-                
-                <div class="col-sm content">
-                    <main role="main">
-                        <h1>$title$</h1>
-                        $body$
-                    </main>
-                </div>
+                    <br>
+                    
+                    $body$
+                    
+                </main>
             </div>
 
             <div class="row">
