--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 @import "base.css";
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Nunito:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
 .photo{
     display:inline;
     max-width:300px;
-    width:90%;
+    width:95%;
 }
         
 @media (max-width: 768px) {
@@ -16,14 +18,13 @@ body {
     background:#fff;
     color: #444;
     font-family: 'Nunito', sans-serif;
-    font-size: 16px;
     font-weight:400;
     margin: 50px auto 0px auto;
     max-width: 900px;
 }
 
-tt {
-    font-family: 'Overpass Mono', monospace;
+main {
+    font-size: 16px;
 }
 
 div#header {
@@ -79,7 +80,7 @@ h2 {
 
 section.header {
     color: #555;
-    font-size: 14px;
+    font-size: 16px;
     font-style: italic;
 }
 
@@ -94,15 +95,19 @@ a {
 }
 
 p {
-    font-size: 16px;
-    line-height: 20px;
     margin-bottom:20px;
 }
 
 .sidebar p {
     font-size: 16px;
-    line-height: 18px;
+    line-height: 21px;
     margin-bottom: 12px;
+}
+
+tt, code {
+    font-family: 'Fira Code', monospace;
+    hyphens: manual;
+    /* font-variant-ligatures: no-common-ligatures; */
 }
 
 /* SYNTAX HIGHLIGHTING */
@@ -138,8 +143,12 @@ pre.numberSource code > span > a:first-child::before
     color: #a0a0a0;
   }
 pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
-div.sourceCode
-  { color: #1f1c1b; background-color: #0e907a0f; padding: 12px; border-radius: 5px;}
+div.sourceCode { 
+    color: #1f1c1b; 
+    background-color: #0e907a0f; 
+    padding: 12px; 
+    border-radius: 5px;
+}
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
