--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -9,9 +9,6 @@
         <meta name="author" content="@egorlappo" />
         <title>Egor Lappo - $title$</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Overpass+Mono&display=swap');
-        </style>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         <link rel="stylesheet" type="text/css" href="/css/blogpost.css" />
     </head>
@@ -27,7 +24,7 @@
             </div>
             <div class="row">
                 <main role="main">
-                    <h1>$title$</h1>
+                    <h1 class="display-4">$title$</h1>
 
                     <div class="info">
                         Posted on $date$
@@ -39,9 +36,14 @@
                         $endif$
                     </div>
 
+                    <hr>
+
                     <br>
                     
-                    $body$
+                    <div class="content">
+                        $body$
+                    </div>
+                    
                     
                 </main>
             </div>
