--- a/templates/default.html
+++ b/templates/default.html
@@ -9,9 +9,6 @@
         <meta name="author" content="@egorlappo" />
         <title>Egor Lappo - $title$</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Overpass+Mono&display=swap');
-        </style>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
     </head>
     <body>
@@ -28,7 +25,7 @@
                 <div class="col-sm-4 sidebar">
                     <h1><a href="/">Egor Lappo</a></h1>
 
-                    <p class="align-content-center">
+                    <p>
                         <img class="photo rounded" src="images/pic.jpeg" alt="my photo)))" />
                     </p>
 
@@ -40,13 +37,13 @@
 
                     <p> github: <a href="https://github.com/$github$"><tt>$github$</tt></a> </p>
 
-                    <p> email: <a href="mailto:$email$"><tt>egor(at)ccrma.stanford.edu</tt></a> </p>
+                    <p> email: <a href="mailto:$email$"><tt>egor (at)</tt> <tt>ccrma.stanford.edu</tt></a> </p>
 
-                    <p><b>I have recently changed my name! <br> Before, I was <i>Egor Alimpiev</i>. <br> You can still email me at <br> <tt>alimpiev(at)stanford.edu</tt>!</b></p>
+                    <p><b>I have recently changed my name! <br> Before, I was <i>Egor Alimpiev</i>. <br> You can still email me at <br> <tt>alimpiev </tt><tt>(at) stanford.edu</tt>!</b></p>
                     <hr>
                 </div>
                 
-                <div class="col-sm content">
+                <div class="col-sm">
                     <main role="main">
                         <h1>$title$</h1>
                         $body$
