--- a/docs/css/blogpost.css
+++ b/docs/css/blogpost.css
@@ -1,1 +1,1 @@
-body{max-width:700px}.content{font-size:12pt;text-align:justify}
+body{max-width:750px}.content{font-size:12pt;text-align:justify}figure{text-align:center}figcaption{font-size:12pt;font-style:italic}img{max-width:375px}
