--- a/docs/css/blogpost.css
+++ b/docs/css/blogpost.css
@@ -1,1 +1,1 @@
-body{max-width:750px}.content{font-size:12pt;text-align:justify}figure{text-align:center}figcaption{font-size:12pt;font-style:italic}img{max-width:375px}.katex{font-size:1em!important}.flickr-embed{max-width:100%}
+body{max-width:750px}.content{font-size:12pt;text-align:justify}figure{text-align:center}figcaption{font-size:12pt;font-style:italic}img{max-width:375px}.katex{font-size:1em!important}.flickr-embed-frame{max-width:100%}
