--- a/docs/css/blogpost.css
+++ b/docs/css/blogpost.css
@@ -1,1 +1,1 @@
-body{max-width:750px}.content{font-size:12pt;text-align:justify}figure{text-align:center}figcaption{font-size:12pt;font-style:italic}img{max-width:375px}.katex{font-size:1em!important}.flickr-embed-frame{max-width:100%}
+body{max-width:750px}.content{font-size:12pt;text-align:justify}figure{text-align:center}figcaption{font-size:12pt;font-style:italic}figure img{max-width:375px}.katex{font-size:1em!important}.flickr-embed-frame{max-width:100%;display:flex;justify-content:center}.flickr-img{max-width:100%;margin-top:1em;margin-bottom:1em;box-shadow:0 0 5px rgba(0,0,0,0.5)}
