--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -16,7 +16,7 @@ figcaption {
     font-style: italic;
 }
 
-img {
+figure img {
     /*set maximal image width to 375 pixels*/
     max-width: 375px;
 
@@ -28,4 +28,14 @@ img {
 
 .flickr-embed-frame {
     max-width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.flickr-img {
+    max-width: 100%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    /* add a small shadow to the image */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
