--- a/templates/default.html
+++ b/templates/default.html
@@ -42,8 +42,8 @@
 
                 <p> email: <a href="mailto:$email$"><tt>elappo (at)</tt> <tt>stanford.edu</tt></a> </p>
 
-                <p><b>I have recently changed my name! <br> Before, I was <i>Egor Alimpiev</i>. <br> You can still email
-                        me at <br> <tt>alimpiev </tt><tt>(at) stanford.edu</tt>!</b></p>
+                <!-- <p><b>I have recently changed my name! <br> Before, I was <i>Egor Alimpiev</i>. <br> You can still email
+                        me at <br> <tt>alimpiev </tt><tt>(at) stanford.edu</tt>!</b></p> -->
                 <hr>
             </div>
 
